src/gateParse.output
Terminals unused in grammar

   UNKNOWN_TOKEN


Grammar

    0 $accept: line $end

    1 line: line one_gate
    2     | line one_latch
    3     | /* empty */

    4 $@1: /* empty */

    5 $@2: /* empty */

    6 one_gate: GATE TEXT $@1 LEFT_CURLY $@2 gates RIGHT_CURLY

    7 $@3: /* empty */

    8 $@4: /* empty */

    9 one_latch: LATCH TEXT $@3 LEFT_CURLY $@4 gates RIGHT_CURLY

   10 gates: construct
   11      | construct gates

   12 construct: LEFT_BRACE NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER RIGHT_BRACE


Terminals, with rules where they appear

$end (0) 0
error (256)
COMMA (258) 12
GATE (259) 6
LATCH (260) 9
LEFT_BRACE (261) 12
LEFT_CURLY (262) 6 9
NUMBER (263) 12
RIGHT_BRACE (264) 12
RIGHT_CURLY (265) 6 9
TEXT (266) 6 9
UNKNOWN_TOKEN (267)


Nonterminals, with rules where they appear

$accept (13)
    on left: 0
line (14)
    on left: 1 2 3, on right: 0 1 2
one_gate (15)
    on left: 6, on right: 1
$@1 (16)
    on left: 4, on right: 6
$@2 (17)
    on left: 5, on right: 6
one_latch (18)
    on left: 9, on right: 2
$@3 (19)
    on left: 7, on right: 9
$@4 (20)
    on left: 8, on right: 9
gates (21)
    on left: 10 11, on right: 6 9 11
construct (22)
    on left: 12, on right: 10 11


State 0

    0 $accept: . line $end

    $default  reduce using rule 3 (line)

    line  go to state 1


State 1

    0 $accept: line . $end
    1 line: line . one_gate
    2     | line . one_latch

    $end   shift, and go to state 2
    GATE   shift, and go to state 3
    LATCH  shift, and go to state 4

    one_gate   go to state 5
    one_latch  go to state 6


State 2

    0 $accept: line $end .

    $default  accept


State 3

    6 one_gate: GATE . TEXT $@1 LEFT_CURLY $@2 gates RIGHT_CURLY

    TEXT  shift, and go to state 7


State 4

    9 one_latch: LATCH . TEXT $@3 LEFT_CURLY $@4 gates RIGHT_CURLY

    TEXT  shift, and go to state 8


State 5

    1 line: line one_gate .

    $default  reduce using rule 1 (line)


State 6

    2 line: line one_latch .

    $default  reduce using rule 2 (line)


State 7

    6 one_gate: GATE TEXT . $@1 LEFT_CURLY $@2 gates RIGHT_CURLY

    $default  reduce using rule 4 ($@1)

    $@1  go to state 9


State 8

    9 one_latch: LATCH TEXT . $@3 LEFT_CURLY $@4 gates RIGHT_CURLY

    $default  reduce using rule 7 ($@3)

    $@3  go to state 10


State 9

    6 one_gate: GATE TEXT $@1 . LEFT_CURLY $@2 gates RIGHT_CURLY

    LEFT_CURLY  shift, and go to state 11


State 10

    9 one_latch: LATCH TEXT $@3 . LEFT_CURLY $@4 gates RIGHT_CURLY

    LEFT_CURLY  shift, and go to state 12


State 11

    6 one_gate: GATE TEXT $@1 LEFT_CURLY . $@2 gates RIGHT_CURLY

    $default  reduce using rule 5 ($@2)

    $@2  go to state 13


State 12

    9 one_latch: LATCH TEXT $@3 LEFT_CURLY . $@4 gates RIGHT_CURLY

    $default  reduce using rule 8 ($@4)

    $@4  go to state 14


State 13

    6 one_gate: GATE TEXT $@1 LEFT_CURLY $@2 . gates RIGHT_CURLY

    LEFT_BRACE  shift, and go to state 15

    gates      go to state 16
    construct  go to state 17


State 14

    9 one_latch: LATCH TEXT $@3 LEFT_CURLY $@4 . gates RIGHT_CURLY

    LEFT_BRACE  shift, and go to state 15

    gates      go to state 18
    construct  go to state 17


State 15

   12 construct: LEFT_BRACE . NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER RIGHT_BRACE

    NUMBER  shift, and go to state 19


State 16

    6 one_gate: GATE TEXT $@1 LEFT_CURLY $@2 gates . RIGHT_CURLY

    RIGHT_CURLY  shift, and go to state 20


State 17

   10 gates: construct .
   11      | construct . gates

    LEFT_BRACE  shift, and go to state 15

    $default  reduce using rule 10 (gates)

    gates      go to state 21
    construct  go to state 17


State 18

    9 one_latch: LATCH TEXT $@3 LEFT_CURLY $@4 gates . RIGHT_CURLY

    RIGHT_CURLY  shift, and go to state 22


State 19

   12 construct: LEFT_BRACE NUMBER . COMMA NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER RIGHT_BRACE

    COMMA  shift, and go to state 23


State 20

    6 one_gate: GATE TEXT $@1 LEFT_CURLY $@2 gates RIGHT_CURLY .

    $default  reduce using rule 6 (one_gate)


State 21

   11 gates: construct gates .

    $default  reduce using rule 11 (gates)


State 22

    9 one_latch: LATCH TEXT $@3 LEFT_CURLY $@4 gates RIGHT_CURLY .

    $default  reduce using rule 9 (one_latch)


State 23

   12 construct: LEFT_BRACE NUMBER COMMA . NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER RIGHT_BRACE

    NUMBER  shift, and go to state 24


State 24

   12 construct: LEFT_BRACE NUMBER COMMA NUMBER . COMMA NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER RIGHT_BRACE

    COMMA  shift, and go to state 25


State 25

   12 construct: LEFT_BRACE NUMBER COMMA NUMBER COMMA . NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER RIGHT_BRACE

    NUMBER  shift, and go to state 26


State 26

   12 construct: LEFT_BRACE NUMBER COMMA NUMBER COMMA NUMBER . COMMA NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER RIGHT_BRACE

    COMMA  shift, and go to state 27


State 27

   12 construct: LEFT_BRACE NUMBER COMMA NUMBER COMMA NUMBER COMMA . NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER RIGHT_BRACE

    NUMBER  shift, and go to state 28


State 28

   12 construct: LEFT_BRACE NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER . COMMA NUMBER COMMA NUMBER COMMA NUMBER RIGHT_BRACE

    COMMA  shift, and go to state 29


State 29

   12 construct: LEFT_BRACE NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER COMMA . NUMBER COMMA NUMBER COMMA NUMBER RIGHT_BRACE

    NUMBER  shift, and go to state 30


State 30

   12 construct: LEFT_BRACE NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER . COMMA NUMBER COMMA NUMBER RIGHT_BRACE

    COMMA  shift, and go to state 31


State 31

   12 construct: LEFT_BRACE NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER COMMA . NUMBER COMMA NUMBER RIGHT_BRACE

    NUMBER  shift, and go to state 32


State 32

   12 construct: LEFT_BRACE NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER . COMMA NUMBER RIGHT_BRACE

    COMMA  shift, and go to state 33


State 33

   12 construct: LEFT_BRACE NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER COMMA . NUMBER RIGHT_BRACE

    NUMBER  shift, and go to state 34


State 34

   12 construct: LEFT_BRACE NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER . RIGHT_BRACE

    RIGHT_BRACE  shift, and go to state 35


State 35

   12 construct: LEFT_BRACE NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER COMMA NUMBER RIGHT_BRACE .

    $default  reduce using rule 12 (construct)
